hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/ttuple.php.exp
File "ttuple.php", line 4, characters 12-22:
Invalid return type (Typing[4110])
File "ttuple.php", line 4, characters 29-38:
This is a tuple of size 2
File "ttuple.php", line 4, characters 12-22:
It is incompatible with a dynamic value
